refactor(admin): remove normal admin profile info modification
Super admins could modify normal admins profile informaion. For
simpler implementation, the route "/admin/update" only updates
the current logged in admin from now on.
For modifying normal admins info, the route "/admin/update/:adminId"
must be used.
